// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Button renders 1`] = `
<Styled(Styled(styled.button))
  canHover={true}
>
  <components__PrimaryButtonLabel>
    Button
  </components__PrimaryButtonLabel>
</Styled(Styled(styled.button))>
`;

exports[`Primary Button renders with icon 1`] = `
<Styled(Styled(styled.button))
  canHover={true}
>
  <components__PrimaryButtonLabel>
    Button
  </components__PrimaryButtonLabel>
  <PrimaryButtonIcon>
    <Memo([object Object])
      color="#FFF"
      icon="plus"
    />
  </PrimaryButtonIcon>
</Styled(Styled(styled.button))>
`;
